more feature coverage in ci tests

--- a/tox.ini
+++ b/tox.ini
@@ -62,7 +62,8 @@ commands =
     coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ init --personality=standalone --appdir /tmp/test
     coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ convert --personality=standalone --cbdir /tmp/test/.crossbar
     coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ status --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=2
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=3
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=8
     coverage combine --rcfile={toxinidir}/.coveragerc
     coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
     coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
