--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,20 @@
 [tox]
 envlist =
     flake8
+    coverage
     {py36,pypy3}-{pinned,unpinned,abtrunk}-trial
     {py36,pypy3}-cli
     {py36,pypy3}-examples
 
 
 [testenv]
+whitelist_externals =
+    sh
+    rm
+    coverage
 deps =
+    coverage
+
     # use Autobahn master branch (in case we changed stuff there we depend on here)
     abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
 
@@ -16,20 +23,18 @@ commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
     pinned: pip install --ignore-installed --require-hashes -r {toxinidir}/requirements.txt
 
-    # in envs with "cli", run crossbar CLI via a test shell script
-    cli: {toxinidir}/test/test_cli.sh
-
-    # in envs with "examples", run Autobahn(Python) client examples a test shell script
-    examples: {toxinidir}/test/test_ab_examples.sh
-
     # in envs with "trial", install test/dev deps
     trial: pip install -r {toxinidir}/requirements-dev.txt
 
-    # in envs with "trial", run Twisted trial (under coverage)
-    trial: coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
+    # in envs with "cli", run crossbar CLI via a test shell script
+    cli: {toxinidir}/test/test_cli.sh
+
+    # in envs with "examples", run autobahn examples via test shell script
+    examples: {toxinidir}/test/test_ab_examples.sh
+
+    # in envs with "trial", run Twisted trial
+    trial: python -m twisted.trial crossbar
 setenv =
-    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
-    COVERAGE_FILE = {toxinidir}/.coverage
     {py36,pypy3}: CB_FULLTESTS = 1
 
 
@@ -38,27 +43,51 @@ skip_install = True
 changedir = {toxinidir}
 exclude = crossbar/worker/test/examples/syntaxerror.py
 deps =
-   flake8
+    flake8
 commands =
-   flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
+    flake8 --ignore=E402,F405,E501,E722,E741,E731,N801,N802,N803,N805,N806 crossbar
 basepython = python3.6
 
 
-[testenv:coverage-report]
-skip_install = True
-changedir={toxinidir}
-deps =
-   coverage
-commands=
-   coverage combine --rcfile={toxinidir}/.coveragerc
-   coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
-   coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py"
-
-
-[testenv:coverage-erase]
-skip_install = True
+[testenv:coverage]
+skip_install = False
 changedir = {toxinidir}
 deps =
-   coverage
-commands=
-   coverage erase
+    coverage
+commands =
+    pip install -r {toxinidir}/requirements-dev.txt
+    coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
+    rm -rf /tmp/test
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ version --personality=standalone
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ init --personality=standalone --appdir /tmp/test
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ convert --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ status --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+    coverage combine --rcfile={toxinidir}/.coveragerc
+    coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
+    coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
+setenv =
+    COVERAGE_PROCESS_START = {toxinidir}/.coveragerc
+    COVERAGE_FILE = {toxinidir}/.coverage
+    {py36,pypy3}: CB_FULLTESTS = 1
+
+
+; [testenv:coverage-report]
+; skip_install = True
+; changedir = {toxinidir}
+; deps =
+;     coverage
+; commands=
+;     coverage combine --rcfile={toxinidir}/.coveragerc
+;     coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
+;     coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
+
+
+; [testenv:coverage-erase]
+; skip_install = True
+; changedir = {toxinidir}
+; deps =
+;     coverage
+; commands =
+;     coverage erase
