allow schema attribute; generate default config with schema link; expand full test

--- a/crossbar/node/templates/default/.crossbar/config.json
+++ b/crossbar/node/templates/default/.crossbar/config.json
@@ -1,6 +1,8 @@
 {
+    "$schema": "https://raw.githubusercontent.com/crossbario/crossbar/master/crossbar.json",
     "version": 2,
-    "controller": {},
+    "controller": {
+    },
     "workers": [
         {
             "type": "router",
