--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,11 @@ matrix:
   fast_finish: true
 
   include:
-    - env: TOX_ENV=flake8
+    - python: 3.6
+      env: TOX_ENV=flake8
+
+    - python: 3.6
+      env: TOX_ENV=bandit
 
     - python: 3.6
       env: TOX_ENV=coverage
