--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,20 @@ setenv =
     {py36,pypy3}: CB_FULLTESTS = 1
 
 
+
+[testenv:bandit]
+skip_install = True
+changedir = {toxinidir}
+exclude = crossbar/worker/test/examples/syntaxerror.py
+deps =
+    bandit
+commands =
+    bandit -r -s B101,B110,B311 \
+        -x crossbar/common/key.py,crossbar/bridge/mqtt/test/test_wamp.py,crossbar/bridge/rest/test/__init__.py,crossbar/bridge/mqtt/test/test_wamp.py,crossbar/webservice/misc.py \
+        crossbar
+basepython = python3.6
+
+
 [testenv:flake8]
 skip_install = True
 changedir = {toxinidir}
