--- a/tox.ini
+++ b/tox.ini
@@ -72,12 +72,12 @@ commands =
     pip install -r {toxinidir}/requirements-dev.txt
     coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
     rm -rf /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ version --personality=standalone
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ init --personality=standalone --appdir /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ convert --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ status --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" version --personality=standalone
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" init --personality=standalone --appdir /tmp/test
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" convert --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" status --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc -c "from crossbar import run; run()" start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
     coverage combine --rcfile={toxinidir}/.coveragerc
     coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
     coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
