--- a/tox.ini
+++ b/tox.ini
@@ -70,14 +70,23 @@ deps =
     coverage
 commands =
     pip install -r {toxinidir}/requirements-dev.txt
+
+    # unit tests
     coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
+
+    # integration tests
     rm -rf /tmp/test
     coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py version --personality=standalone
     coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py init --personality=standalone --appdir /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py convert --personality=standalone --cbdir /tmp/test/.crossbar
     coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py status --personality=standalone --cbdir /tmp/test/.crossbar
     coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py convert --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+
+    # test a node with all features ("full configuration")
     coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+
+    # create coverage report
     coverage combine --rcfile={toxinidir}/.coveragerc
     coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
     coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
