--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,20 @@ setenv =
     {py36,pypy3}: CB_FULLTESTS = 1
 
 
+
+[testenv:bandit]
+skip_install = True
+changedir = {toxinidir}
+exclude = crossbar/worker/test/examples/syntaxerror.py
+deps =
+    bandit
+commands =
+    bandit -r -s B101,B110,B311 \
+        -x crossbar/common/key.py,crossbar/bridge/mqtt/test/test_wamp.py,crossbar/bridge/rest/test/__init__.py,crossbar/bridge/mqtt/test/test_wamp.py,crossbar/webservice/misc.py \
+        crossbar
+basepython = python3.6
+
+
 [testenv:flake8]
 skip_install = True
 changedir = {toxinidir}
@@ -56,14 +70,23 @@ deps =
     coverage
 commands =
     pip install -r {toxinidir}/requirements-dev.txt
+
+    # unit tests
     coverage run --rcfile={toxinidir}/.coveragerc -m twisted.trial crossbar
+
+    # integration tests
     rm -rf /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ version --personality=standalone
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ init --personality=standalone --appdir /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ convert --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ status --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
-    coverage run --rcfile={toxinidir}/.coveragerc -m crossbar.__main__ start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py version --personality=standalone
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py init --personality=standalone --appdir /tmp/test
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py status --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py convert --personality=standalone --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+
+    # test a node with all features ("full configuration")
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+
+    # create coverage report
     coverage combine --rcfile={toxinidir}/.coveragerc
     coverage report --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
     coverage html --rcfile={toxinidir}/.coveragerc --omit="*/syntaxerror.py" --omit="*/test/*.py"
