remove personality argument

--- a/tox.ini
+++ b/tox.ini
@@ -76,15 +76,15 @@ commands =
 
     # integration tests
     rm -rf /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py version --personality=standalone
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py init --personality=standalone --appdir /tmp/test
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py status --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py convert --personality=standalone --cbdir /tmp/test/.crossbar
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py version
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py init --appdir /tmp/test
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py status --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --cbdir /tmp/test/.crossbar --shutdownafter=5
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py convert --cbdir /tmp/test/.crossbar
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --cbdir /tmp/test/.crossbar --shutdownafter=5
 
     # test a node with all features ("full configuration")
-    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --personality=standalone --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
+    coverage run --rcfile={toxinidir}/.coveragerc test/run_crossbar.py start --cbdir {toxinidir}/test/full/.crossbar --shutdownafter=15
 
     # create coverage report
     coverage combine --rcfile={toxinidir}/.coveragerc
