--- a/tox.ini
+++ b/tox.ini
@@ -12,8 +12,13 @@ envlist =
 [testenv]
 whitelist_externals =
     sh
+    cp
     rm
+    sphinx
+    sphinx-build
     coverage
+    bandit
+    flake8
 deps =
     coverage
 
