Alpine 3.7 no longer ships libssl, install it ourselves

--- a/docker/x86_64/Dockerfile.cpy3
+++ b/docker/x86_64/Dockerfile.cpy3
@@ -29,6 +29,7 @@ RUN    apk --update upgrade \
     && apk add --virtual .build-deps \
                build-base \
                libffi-dev \
+               libssl1.0 \
                openssl-dev \
                linux-headers \
     && pip install --no-cache-dir -U pip \
