x86 docker: Install libssl as alpine no longer ships it (#1378)
* Alpine 3.7 no longer ships libssl, install it ourselves

* install at the right place

--- a/docker/x86_64/Dockerfile.cpy3
+++ b/docker/x86_64/Dockerfile.cpy3
@@ -26,6 +26,7 @@ ENV PYTHONUNBUFFERED 1
 # install dependencies and Crossbar.io
 RUN    apk --update upgrade \
     && apk add libffi \
+               libssl1.0 \
     && apk add --virtual .build-deps \
                build-base \
                libffi-dev \
