Ensure the js directory exists in node config's web dir

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -65,6 +65,7 @@ qemu_deps:
 # we bake into the images
 #
 autobahn:
+	mkdir -p ./_node/web/js
 	cp ../../autobahn-js-built/autobahn.* ./node/web/js/
 	cp ../../autobahn-js-built/CHECKSUM.* ./node/web/js/
 	cp ../../autobahn-js-built/LICENSE ./node/web/js/
