actually fix arm64v8/armhf builds

--- a/docker/aarch64/Dockerfile.cpy3
+++ b/docker/aarch64/Dockerfile.cpy3
@@ -32,11 +32,10 @@ RUN    apt-get update \
                expat \
                build-essential \
                libssl-dev \
-
+               libffi-dev \
     # install Crossbar.io from PyPI
     && pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
-
     # minimize image
     && apt-get remove -y build-essential \
     && rm -rf ~/.cache \
