--- a/docker/x86_64/Dockerfile.pypy3
+++ b/docker/x86_64/Dockerfile.pypy3
@@ -1,4 +1,4 @@
-FROM amd64/pypy:3
+FROM amd64/pypy:3-slim
 
 MAINTAINER The Crossbar.io Project <support@crossbario.com>
 
@@ -31,11 +31,9 @@ RUN    apt-get update \
                expat \
                build-essential \
                libssl-dev \
-
     # install Crossbar.io from PyPI
     && pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
-
     # minimize image
     && apt-get remove -y wget expat build-essential \
     && rm -rf ~/.cache \
