fix prepare make command

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -24,6 +24,7 @@ test: test_cpy3 test_pypy3
 prepare:
 	-rm -rf ./node
 	crossbar init --appdir ./node
+	mkdir node/web/js -p
 
 publish:
 	# amd64 / community / cpy3
