Updated config.js example

--- a/docs/pages/code/config.json
+++ b/docs/pages/code/config.json
@@ -1,6 +1,8 @@
 {
+    "$schema": "https://raw.githubusercontent.com/crossbario/crossbar/master/crossbar.json",
     "version": 2,
-    "controller": {},
+    "controller": {
+    },
     "workers": [
         {
             "type": "router",
@@ -48,6 +50,13 @@
                     "web": {
                         "paths": {
                             "/": {
+                                "type": "static",
+                                "directory": "../web",
+                                "options": {
+                                    "enable_directory_listing": true
+                                }
+                            },
+                            "info": {
                                 "type": "nodeinfo"
                             }
                         }
