--- a/docker/aarch64/Dockerfile.cpy3
+++ b/docker/aarch64/Dockerfile.cpy3
@@ -1,4 +1,4 @@
-FROM arm64v8/python:3.7-slim
+FROM arm64v8/python:3-slim
 
 COPY .qemu/qemu-aarch64-static /usr/bin/qemu-aarch64-static
 
@@ -37,7 +37,7 @@ RUN    apt-get update \
     && pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
     # minimize image
-    && apt-get remove -y build-essential \
+    # && apt-get remove -y build-essential \
     && rm -rf ~/.cache \
     && rm -rf /var/lib/apt/lists/*
 
