--- a/docker/x86_64/Dockerfile.cpy3
+++ b/docker/x86_64/Dockerfile.cpy3
@@ -1,4 +1,4 @@
-FROM python:3-alpine
+FROM python:3-slim
 
 MAINTAINER The Crossbar.io Project <support@crossbario.com>
 
@@ -24,24 +24,27 @@ ENV DEBIAN_FRONTEND noninteractive
 ENV PYTHONUNBUFFERED 1
 
 # install dependencies and Crossbar.io
-RUN    apk --update upgrade \
-    && apk add libffi \
-               libssl1.0 \
-    && apk add --virtual .build-deps \
-               build-base \
+RUN    apt-get update \
+    && apt-get install -y --no-install-recommends \
+               ca-certificates \
+               expat \
+               build-essential \
+               libssl-dev \
                libffi-dev \
-               openssl-dev \
-               linux-headers \
+    # install Crossbar.io from PyPI
     && pip install --no-cache-dir -U pip \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
-    && apk del .build-deps
+    # minimize image
+    # && apt-get remove -y build-essential \
+    && rm -rf ~/.cache \
+    && rm -rf /var/lib/apt/lists/*
 
 # test if everything installed properly
 RUN crossbar version
 
 # add our user and group
-RUN    addgroup -S -g 242 crossbar \
-    && adduser -S -u 242 -D -h /node -G crossbar -g "Crossbar.io Service" crossbar
+# add our user and group
+RUN adduser --system --group --uid 242 --home /node crossbar
 
 # initialize a Crossbar.io node
 COPY ./.node/ /node/
