--- a/requirements-min.txt
+++ b/requirements-min.txt
@@ -1,37 +1,37 @@
-idna<2.6,>=2.5
+attrs>=17.2.0
+autobahn>=18.10.1
+bitstring>=3.1.5
+cbor>=1.0.0
 click>=6.7
-setuptools>=36.0.1
-zope.interface>=4.4.2
-Twisted>=18.7.0
+constantly>=15.1.0
+cryptography>=1.9
 h2>=3.0,<4.0
+idna<2.6,>=2.5
+incremental>=17.5.0
+jinja2>=2.9.6
+lmdb>=0.92
+mistune>=0.7.4
+netaddr>=0.7.19
+passlib>=1.7.1
 priority>=1.3.0
+psutil>=5.2.2
+py-ubjson>=0.9.0
+pyasn1-modules>=0.0.9
+pyasn1>=0.2.3
+pygments>=2.2.0
+pynacl>=1.1.2
+pyopenssl>=17.1.0
+pyqrcode>=1.2.1
+pytrie>=0.3
+pyyaml>=3.12
+sdnotify>=0.3.1
+service_identity>=17.0.0
+setproctitle>=1.1.10
+setuptools>=36.0.1
+treq>=17.3.1
+twisted>=18.9.0
 txaio>=18.8.1
 txtorcon>=0.19.3
-autobahn>=18.9.2
-netaddr>=0.7.19
-PyTrie>=0.3
-Jinja2>=2.9.6
-mistune>=0.7.4
-Pygments>=2.2.0
-PyYAML>=3.12
-sdnotify>=0.3.1
-psutil>=5.2.2
-lmdb>=0.92
 u-msgpack-python>=2.4.1
-cbor>=1.0.0
-py-ubjson>=0.9.0
-cryptography>=1.9
-pyOpenSSL>=17.1.0
-pyasn1>=0.2.3
-pyasn1-modules>=0.0.9
-service_identity>=17.0.0
-PyNaCl>=1.1.2
-treq>=17.3.1
-setproctitle>=1.1.10
-pyqrcode>=1.2.1
 watchdog>=0.8.3
-bitstring>=3.1.5
-attrs>=17.2.0
-incremental>=17.5.0
-constantly>=15.1.0
-passlib>=1.7.1
+zope.interface>=4.4.2
