also install ab trunk for coverage

--- a/tox.ini
+++ b/tox.ini
@@ -97,6 +97,9 @@ skip_install = False
 changedir = {toxinidir}
 deps =
     coverage
+
+    # use Autobahn master branch (in case we changed stuff there we depend on here)
+    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
 commands =
     pip install -r {toxinidir}/requirements-dev.txt
 
