fix CI - hopefully;)

--- a/tox.ini
+++ b/tox.ini
@@ -21,10 +21,7 @@ whitelist_externals =
     flake8
 deps =
     coverage
-
-    # use Autobahn master branch (in case we changed stuff there we depend on here)
-    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
-
+    -r{toxinidir}/requirements-latest.txt
     examples: colorama
 commands =
     # in envs with "pinned", install hash-pinned deps (which is what we release in binaries)
@@ -55,6 +52,7 @@ deps =
     sphinx_rtd_theme
     pyenchant
     sphinxcontrib_spelling
+    -r{toxinidir}/requirements-latest.txt
 commands =
     # first test with all warnings fatal
     sphinx-build -nWT -b dummy ./docs ./docs/_build
@@ -97,9 +95,7 @@ skip_install = False
 changedir = {toxinidir}
 deps =
     coverage
-
-    # use Autobahn master branch (in case we changed stuff there we depend on here)
-    abtrunk: https://github.com/crossbario/autobahn-python/archive/master.zip
+    -r{toxinidir}/requirements-latest.txt
 commands =
     pip install -r {toxinidir}/requirements-dev.txt
 
