--- a/requirements-pinned.txt
+++ b/requirements-pinned.txt
@@ -42,6 +42,7 @@ sdnotify==0.3.2
 service-identity==18.1.0
 setproctitle==1.1.10
 setuptools==40.6.2
+six==1.11.0
 sortedcontainers==2.1.0
 treq==18.6.0
 Twisted==18.9.0
