--- a/docker/x86_64/Dockerfile.pypy3
+++ b/docker/x86_64/Dockerfile.pypy3
@@ -31,8 +31,8 @@ RUN    apt-get update \
                expat \
                build-essential \
                libssl-dev \
-    # install Crossbar.io from PyPI
-    && pip install --no-cache-dir -U pip \
+    # install Crossbar.io from PyPI. rgd pip: https://github.com/pypa/pip/issues/6158 and https://github.com/pypa/pip/issues/6197
+    && pip install --no-cache-dir --upgrade "pip<19" \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
     # minimize image
     # && apt-get remove -y wget expat build-essential \
