--- a/docker/armhf/Dockerfile.cpy3
+++ b/docker/armhf/Dockerfile.cpy3
@@ -33,8 +33,8 @@ RUN    apt-get update \
                build-essential \
                libssl-dev \
                libffi-dev \
-    # install Crossbar.io from PyPI
-    && pip install --no-cache-dir -U pip \
+    # install Crossbar.io from PyPI. rgd pip: https://github.com/pypa/pip/issues/6158 and https://github.com/pypa/pip/issues/6197
+    && pip install --no-cache-dir --upgrade "pip<19" \
     && pip install --no-cache-dir crossbar>=${CROSSBAR_VERSION} \
     # minimize image
     # && apt-get remove -y build-essential \
